--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "enzyme-adapter-react-16": "^1.10.0",
     "express": "^4.16.4",
     "knex": "^0.16.3",
+    "nock": "^10.0.6",
     "nodemon": "^1.18.10",
     "pg": "^7.8.0",
     "react": "^16.8.2",
@@ -23,6 +24,7 @@
     "redux-mock-store": "^1.5.3",
     "redux-thunk": "^2.3.0",
     "sqlite3": "^4.0.6",
+    "superagent": "^4.1.0",
     "webpack": "^4.29.4"
   },
   "scripts": {
