--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "redux-thunk": "^2.3.0",
     "sqlite3": "^4.0.6",
     "superagent": "^4.1.0",
+    "supertest": "^3.4.2",
     "webpack": "^4.29.4"
   },
   "scripts": {
