--- a/package.json
+++ b/package.json
@@ -51,5 +51,10 @@
     "jest": "^24.1.0",
     "react-test-renderer": "^16.8.3",
     "webpack-cli": "^3.2.3"
+  },
+  "jest": {
+    "coveragePathIgnorePatterns": [
+      "/db"
+    ]
   }
 }
