--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "redux": "^4.0.1",
     "redux-mock-store": "^1.5.3",
     "redux-thunk": "^2.3.0",
+    "sinon": "^7.2.5",
     "sqlite3": "^4.0.6",
     "superagent": "^4.1.0",
     "supertest": "^3.4.2",
