--- a/.travis.yml
+++ b/.travis.yml
@@ -5,8 +5,8 @@ cache:
   directories:
     - node_modules
 script:
-  - npm knex migrate:latest
-  - npm knex seed:run
+  - yarn run knex migrate:latest
+  - yarn run knex seed:run
   - npm run build
   - npm test
 
